--- a/_articles/2013-03-01-tutorial-1.md
+++ b/_articles/2013-03-01-tutorial-1.md
@@ -1,7 +1,7 @@
 ---
 title: "Tutorial 1 on Relevant Topic in Your Field"
-collection: talks
-type: "Tutorial"
+collection: articles
+type: "Articles"
 permalink: /talks/2013-03-01-tutorial-1
 venue: "UC-Berkeley Institute for Testing Science"
 date: 2013-03-01
@@ -10,4 +10,4 @@ location: "Berkeley, CA, USA"
 
 [More information here](http://exampleurl.com)
 
-This is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+This is a description of your article, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!
